objects/box__FRUP__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>box__BOSS_Action__c</fullName>
        <label>BOSS Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Lead_Move</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>box__BOSS_Status__c</fullName>
        <label>BOSS Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Converted</fullName>
                </value>
                <value>
                    <fullName>Converted_Move</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>box__Box_user__c</fullName>
        <externalId>true</externalId>
        <label>Box user</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>box__CollaborationID__c</fullName>
        <label>CollaborationID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>box__Folder_ID__c</fullName>
        <externalId>true</externalId>
        <label>Folder ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>box__Lead_Dest_Folder_ID__c</fullName>
        <externalId>true</externalId>
        <label>Lead Dest Folder ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>box__New_Permission__c</fullName>
        <label>New Permission</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
                <value>
                    <fullName>No Access</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>box__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>box__Permission__c</fullName>
        <label>Permission</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
                <value>
                    <fullName>No Access</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>box__Record_ID__c</fullName>
        <label>Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>box__Retry_Count__c</fullName>
        <description>Number of times this FRUP entry has been retried for synchronizing permissions to Box</description>
        <inlineHelpText>Number of times this FRUP entry has been retried for synchronizing permissions to Box</inlineHelpText>
        <label>Retry Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>box__Salesforce_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FRUP</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>FRUP</label>
    <listViews>
        <fullName>Nolan_Daigle_FRUP</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>box__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FRUP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FRUP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>